--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#ffffff"/>
-  <link rel="manifest" href="/manifest.json" />
   <title>Anika Oracle App</title>
 </head>
-<body class="bg-white text-gray-900">
-  <main class="flex items-center justify-center h-screen">
-    <h1 class="text-4xl font-bold">Welcome to the Anika Oracle App</h1>
-  </main>
+<body>
+  <div id="root">Loading...</div>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
